# nova

./: .gitignore  BUILD_TROUBLESHOOTING.md  CMakeLists.txt  VoidSynth.jucer  build_simple.py  build_windows.bat  build_windows.ps1  build_windows_fixed.bat
.github/workflows/: build-windows.yml
Resources/Presets/Granular/: 01_VOCAL_SCATTER.json  02_WHISPER_CLOUD.json  03_TAPE_GHOSTS.json  04_RAIN_TEXTURE.json  05_CHOPPED_SOUL.json  06_DIGITAL_DUST.json  07_SHIMMER_VOX.json  08_FROZEN_MOMENT.json  09_GLITCH_HOP.json  10_FRED_MODE.json  11_AMBIENT_VOICE.json  12_BROKEN_TAPE.json  13_CRYSTAL.json  14_STUTTER.json  15_OCEAN_DRIFT.json  16_CHOIR_MACHINE.json  17_NOSTALGIA.json  18_GLASS_SHARDS.json  19_DREAMSCAPE.json  20_STATIC_PRAYER.json  21_ALIEN_RADIO.json  22_PROPHET.json  23_TIME_WARP.json  24_CLOUD_ATLAS.json  25_VINYL_DREAMS.json  26_AFTERLIFE.json  27_PIXEL_RAIN.json  28_SACRED.json  29_MACHINE_GUN.json  30_ASTRAL.json
Resources/Presets/Pads/: 01_VAST.json  02_WARM_BLANKET.json  03_COLD_STEEL.json  04_MIDNIGHT.json  05_ETHEREAL.json  06_PULSE.json  07_ANALOG_DREAM.json  08_GLASS_OCEAN.json  09_HAZE.json  10_CATHEDRAL.json  11_NEON_GLOW.json  12_DEEP_SPACE.json  13_SILK.json  14_TENSION.json  15_CLOUD_NINE.json  16_AURORA.json  17_PHANTOM.json  18_HORIZON.json  19_MEMORY_FOAM.json  20_VOID_PAD.json  21_INTERSTELLAR.json  22_EMOTIONAL.json  23_DARK_MATTER.json  24_GOLDEN_HOUR.json  25_LUCID.json  26_STRATOSPHERE.json  27_UNDERGROUND.json  28_CELESTIAL.json  29_TWILIGHT.json  30_INFINITY.json
Resources/Presets/Rage/: 01_PHONK_DEMON.json  02_808_SLIDE.json  03_808_MURDER.json  04_RAGE_SAW.json  05_TRAP_METAL.json  06_DRILL_STAB.json  07_DEMON_TIME.json  08_PLUGG_LEAD.json  09_DISTORTED_REALITY.json  10_BASS_DROP.json  11_SCREAM.json  12_GROWL_BASS.json  13_NIGHTMARE.json  14_HEAT_CHECK.json  15_VOID_808.json  16_BRASS_RAT.json  17_CRUNCH_TIME.json  18_EVIL_TWIN.json  19_MURDER_CHORD.json  20_BASS_FACE.json  21_DARK_ENERGY.json  22_GLITCH_KING.json  23_TRAP_LORD.json  24_OPIUM_DRIP.json  25_808_DEMON.json  26_NEON_BLADE.json  27_CARTI_BELL.json  28_DETROIT_TYPE.json  29_SHADOW_REALM.json  30_CRYBABY.json  31_RAGE_QUIT.json  32_PLUCK_TRAP.json  33_PHONK_DRIFT.json  34_GANG_GANG.json  35_ICE_PICK.json  36_HELL_BASS.json  37_FLUTE_TYPE.json  38_WOCK_LEAN.json  39_TURBO.json  40_VOID_SCREAMER.json
Source/: DistortionProcessor.cpp  DistortionProcessor.h  FXChain.cpp  FXChain.h  GranularEngine.cpp  GranularEngine.h  LookAndFeel.cpp  LookAndFeel.h  MacroSystem.cpp  MacroSystem.h  MultiFilter.cpp  MultiFilter.h  OscillatorEngine.cpp  OscillatorEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SubOscillator.cpp  SubOscillator.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
build-windows/: CMakeCache.txt
cmake/: mingw-w64-toolchain.cmake
scripts/: generate_audio_resources.py
